--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 answerfile/mainTemplate.json
+answerfile/mainTemplate.zip
+answerfile/main-Template.json
+answerfile/main-Template.zip
+answerfile/main-Template-06-21-19.zip
+answerfile/testdrive-06-21-19-1029pm.zip
